--- a/PDS Info Update/Language Skill.html
+++ b/PDS Info Update/Language Skill.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Officers</title>
   </head>
 
   <body>
@@ -44,8 +45,9 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
+      <!--sidebar wrapper -->
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
         <ul class="metismenu" id="menu">
@@ -71,74 +73,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-                    <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
-                      <li>
-                        <a href="Search Officers.html">Search Officers</a>
-                      </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-                      </li>
-                      <li>
-                        <a href="Sub-Assistant Engineers.html"
-                          >Sub-Assistent Engineer</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Current Posting.html">Current Postings</a>
-                      </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
-
-                      <li>
-                        <a href="Vacant Post Officers.html"
-                          >Vacant Posts(Officers)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Vacant Post Staffs.html"
-                          >Vacant Posts(Staff)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Deputation.html"
-                          >Officers in Deputation</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
-                      </li>
-                      <li>
-                        <a href="Officer In Reserve.html"
-                          >Officers in Reserve</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Foreign.html"
-                          >Officers in Foreign Country</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
-                      </li>
-                      <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
-                      </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li>
-                        <a href="Foreign Travel Report.html"
-                          >Foreign Travel Reports</a
-                        >
-                      </li>
-                    </ul>
+					<ul>
+						<li><a href="Short PDS.html">Short PDS</a></li>
+						<li><a href="PDS Printing.html">PDS Printing</a></li>
+						<li>
+						  <a href="Search Officers.html">Search Officers</a>
+						</li>
+						<li><a href="Search Staffs.html">Search Staffs</a></li>
+						<li>
+						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+						</li>
+						<li>
+						  <a href="Sub-Assistant Engineers.html"
+							>Sub-Assistent Engineer</a
+						  >
+						</li>
+						<li>
+						  <a href="Class 3 Employee.html">Class 3 Employees</a>
+						</li>
+						<li>
+						  <a href="Class 4 Employee.html">Class 4 Employees</a>
+						</li>
+						<li>
+						  <a href="Current Posting.html">Current Postings</a>
+						</li>
+						<li><a href="Posting Date.html">Posting Date</a></li>
+  
+						<li>
+						  <a href="Vacant Post Officers.html"
+							>Vacant Posts(Officers)</a
+						  >
+						</li>
+						<li>
+						  <a href="Vacant Post Staffs.html"
+							>Vacant Posts(Staff)</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Deputation.html"
+							>Officers in Deputation</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Lien.html">Officers on Lien</a>
+						</li>
+						<li>
+						  <a href="Officer In Reserve.html"
+							>Officers in Reserve</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Foreign.html"
+							>Officers in Foreign Country</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer On Leave.html">Officers on Leave</a>
+						</li>
+						<li>
+						  <a href="PRL Dates.html">PRL Dates of Officers</a>
+						</li>
+						<li><a href="Employee Added.html">Employee Added</a></li>
+						<li><a href="PDS Update.html">PDS Update List</a></li>
+						<li>
+						  <a href="Foreign Travel Report.html"
+							>Foreign Travel Reports</a
+						  >
+						</li>
+					  </ul>
                   </div>
                 </div>
               </div>
@@ -300,58 +302,196 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
+      <!--end sidebar wrapper -->
 
-      <div class="col-md-10 page-content">
+      <!--start page wrapper -->
+
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-6 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Language Information:
+                  </h4>
+                </div>
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div
+                    class="col-md-12 d-flex align-items-center justify-content-center"
+                  >
+                    <label for="inputClass" class="form-label mx-2"
+                      >Search by Gradation No.:
+                    </label>
+                    <input
+                      style="width: 150px"
+                      class="form-control"
+                      type="text"
+                      name="txtSearchGradation"
+                      maxlength="16"
+                      value=""
+                    />
+                    <button
+                      type="submit"
+                      class="btn btn-success mx-2 px-2 py-0"
+                    >
+                      GO
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="table-secondary">
+                      <td style="width: 200px">Language</td>
+                      <td scope="col">Read</td>
+                      <td scope="col">Write</td>
+                      <td scope="col">Speak</td>
+                      <td scope="col"></td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Bangla</td>
+                      <td>yes</td>
+                      <td>yes</td>
+                      <td>yes</td>
+                      <td class="text-center">
+                        <button
+                          type="submit"
+                          class="btn btn-outline-success py-0"
+                        >
+                          Edit
+                        </button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>English</td>
+                      <td>yes</td>
+                      <td>yes</td>
+                      <td>yes</td>
+                      <td class="text-center">
+                        <button
+                          type="submit"
+                          class="btn btn-outline-success py-0"
+                        >
+                          Edit
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <h5 class="text-dark text-center">Add Language Skill</h5>
+                  <hr />
+                </div>
+                <form action="">
+                  <table class="table">
+                    <tbody>
+                      <tr>
+                        <td scope="col">Language</td>
+                        <td scope="col">Read</td>
+                        <td scope="col">Write</td>
+                        <td scope="col">Speak</td>
+                        <td scope="col"></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <select
+                            class="form-select"
+                            aria-label="Default select example"
+                            style="width: 145px"
+                          >
+                            <option value="1">Bangla</option>
+                            <option value="2">English</option>
+                            <option value="3">Arabic</option>
+                            <option value="4">Hindi</option>
+                            <option value="5">Urdu</option>
+                            <option value="6">Russian</option>
+                          </select>
+                        </td>
+                        <td><input type="checkbox" name="chkRead" /></td>
+                        <td><input type="checkbox" name="chkWrite" /></td>
+                        <td><input type="checkbox" name="chkSpeak" /></td>
+                        <td>
+                          <button type="submit" class="btn btn-success py-0">
+                            Add
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </form>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <h5 class="text-dark text-center">Edit Language Skill</h5>
+                  <hr />
+                </div>
+                <form action="">
+                  <table class="table">
+                    <tbody>
+                      <tr>
+                        <td scope="col">Language</td>
+                        <td scope="col">Read</td>
+                        <td scope="col">Write</td>
+                        <td scope="col">Speak</td>
+                        <td scope="col"></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <select
+                            class="form-select"
+                            aria-label="Default select example"
+                            style="width: 145px"
+                          >
+                            <option value="1">Bangla</option>
+                            <option value="2">English</option>
+                            <option value="3">Arabic</option>
+                            <option value="4">Hindi</option>
+                            <option value="5">Urdu</option>
+                            <option value="6">Russian</option>
+                          </select>
+                        </td>
+                        <td><input type="checkbox" name="chkRead" /></td>
+                        <td><input type="checkbox" name="chkWrite" /></td>
+                        <td><input type="checkbox" name="chkSpeak" /></td>
+                        <td>
+                          <button type="submit" class="btn btn-success py-0">
+                            Edit
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <!--end page wrapper -->
+      <!--start overlay-->
+      <div class="overlay toggle-icon"></div>
+      <!--end overlay-->
 
-    <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
-    </footer>
+      <footer class="page-footer">
+        <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
