--- a/Reports/PDS Printing.html
+++ b/Reports/PDS Printing.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Officers</title>
   </head>
 
   <body>
@@ -44,7 +45,7 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
@@ -71,74 +72,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-                    <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
-                      <li>
-                        <a href="Search Officers.html">Search Officers</a>
-                      </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-                      </li>
-                      <li>
-                        <a href="Sub-Assistant Engineers.html"
-                          >Sub-Assistent Engineer</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Current Posting.html">Current Postings</a>
-                      </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
-
-                      <li>
-                        <a href="Vacant Post Officers.html"
-                          >Vacant Posts(Officers)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Vacant Post Staffs.html"
-                          >Vacant Posts(Staff)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Deputation.html"
-                          >Officers in Deputation</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
-                      </li>
-                      <li>
-                        <a href="Officer In Reserve.html"
-                          >Officers in Reserve</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Foreign.html"
-                          >Officers in Foreign Country</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
-                      </li>
-                      <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
-                      </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li>
-                        <a href="Foreign Travel Report.html"
-                          >Foreign Travel Reports</a
-                        >
-                      </li>
-                    </ul>
+					<ul>
+						<li><a href="Short PDS.html">Short PDS</a></li>
+						<li><a href="PDS Printing.html">PDS Printing</a></li>
+						<li>
+						  <a href="Search Officers.html">Search Officers</a>
+						</li>
+						<li><a href="Search Staffs.html">Search Staffs</a></li>
+						<li>
+						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+						</li>
+						<li>
+						  <a href="Sub-Assistant Engineers.html"
+							>Sub-Assistent Engineer</a
+						  >
+						</li>
+						<li>
+						  <a href="Class 3 Employee.html">Class 3 Employees</a>
+						</li>
+						<li>
+						  <a href="Class 4 Employee.html">Class 4 Employees</a>
+						</li>
+						<li>
+						  <a href="Current Posting.html">Current Postings</a>
+						</li>
+						<li><a href="Posting Date.html">Posting Date</a></li>
+  
+						<li>
+						  <a href="Vacant Post Officers.html"
+							>Vacant Posts(Officers)</a
+						  >
+						</li>
+						<li>
+						  <a href="Vacant Post Staffs.html"
+							>Vacant Posts(Staff)</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Deputation.html"
+							>Officers in Deputation</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Lien.html">Officers on Lien</a>
+						</li>
+						<li>
+						  <a href="Officer In Reserve.html"
+							>Officers in Reserve</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Foreign.html"
+							>Officers in Foreign Country</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer On Leave.html">Officers on Leave</a>
+						</li>
+						<li>
+						  <a href="PRL Dates.html">PRL Dates of Officers</a>
+						</li>
+						<li><a href="Employee Added.html">Employee Added</a></li>
+						<li><a href="PDS Update.html">PDS Update List</a></li>
+						<li>
+						  <a href="Foreign Travel Report.html"
+							>Foreign Travel Reports</a
+						  >
+						</li>
+					  </ul>
                   </div>
                 </div>
               </div>
@@ -172,20 +173,18 @@
                         <a href="Personal Info.html">Personal Information</a>
                       </li>
                       <li><a href="Spouse Info.html">Spouse Info.</a></li>
-                      <li><a href="Children Info.html">Children Info.</a></li>
-                      <li><a href="Language Skill.html">Language Skill </a></li>
-                      <li><a href="Education Info.html">Education Info.</a></li>
+                      <li><a href="app-emailbox.html">Children Info.</a></li>
+                      <li><a href="app-emailbox.html">Language Skill </a></li>
+                      <li><a href="app-emailbox.html">Education Info.</a></li>
                       <li>
-                        <a href="Foreign Travel.html">Foreign Travel Info.</a>
+                        <a href="app-emailbox.html">Foreign Travel Info.</a>
                       </li>
-                      <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service.html">Service Exam</a></li>
-                       <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
-                      <li><a href="Honours.html">Honours/Award</a></li>
-                      <li><a href="Publications.html">Publication</a></li>
-                      <li>
-                        <a href="Previous Services.html">Previous Services</a>
-                      </li>
+                      <li><a href="app-emailbox.html">Training Info.</a></li>
+                      <li><a href="app-emailbox.html">Service Exam</a></li>
+                      <li><a href="app-emailbox.html">Affiliations</a></li>
+                      <li><a href="app-emailbox.html">Honours/Award</a></li>
+                      <li><a href="app-emailbox.html">Publication</a></li>
+                      <li><a href="app-emailbox.html">Previous Services</a></li>
                       <li>
                         <a href="app-emailbox.html">Official Information</a>
                       </li>
@@ -300,57 +299,55 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
+      <!--end sidebar wrapper -->
 
-      <div class="col-md-10 page-content">
+      <!--start page wrapper -->
+
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-5 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Personnel Data Sheet:
+                  </h4>
+                </div>
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div
+                    class="col-md-12 d-flex align-items-center justify-content-center"
+                  >
+                    <label for="inputClass" class="form-label mx-2"
+                      >Search by Gradation No.:
+                    </label>
+                    <input
+                      style="width: 150px"
+                      class="form-control"
+                      type="text"
+                      name="txtSearchGradation"
+                      maxlength="16"
+                      value=""
+                    />
+                    <button
+                      type="submit"
+                      class="btn btn-success mx-2 px-2 py-0"
+                    >
+                      GO
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
+      <p class="mb-0">Designed & Developed BY Shell Technologies</p>
     </footer>
 
     <script
