--- a/Reports/Search Staffs.html
+++ b/Reports/Search Staffs.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Staff</title>
   </head>
 
   <body>
@@ -44,7 +45,7 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
@@ -71,74 +72,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-                    <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
-                      <li>
-                        <a href="Search Officers.html">Search Officers</a>
-                      </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-                      </li>
-                      <li>
-                        <a href="Sub-Assistant Engineers.html"
-                          >Sub-Assistent Engineer</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Current Posting.html">Current Postings</a>
-                      </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
-
-                      <li>
-                        <a href="Vacant Post Officers.html"
-                          >Vacant Posts(Officers)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Vacant Post Staffs.html"
-                          >Vacant Posts(Staff)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Deputation.html"
-                          >Officers in Deputation</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
-                      </li>
-                      <li>
-                        <a href="Officer In Reserve.html"
-                          >Officers in Reserve</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Foreign.html"
-                          >Officers in Foreign Country</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
-                      </li>
-                      <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
-                      </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li>
-                        <a href="Foreign Travel Report.html"
-                          >Foreign Travel Reports</a
-                        >
-                      </li>
-                    </ul>
+					<ul>
+						<li><a href="Short PDS.html">Short PDS</a></li>
+						<li><a href="PDS Printing.html">PDS Printing</a></li>
+						<li>
+						  <a href="Search Officers.html">Search Officers</a>
+						</li>
+						<li><a href="Search Staffs.html">Search Staffs</a></li>
+						<li>
+						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+						</li>
+						<li>
+						  <a href="Sub-Assistant Engineers.html"
+							>Sub-Assistent Engineer</a
+						  >
+						</li>
+						<li>
+						  <a href="Class 3 Employee.html">Class 3 Employees</a>
+						</li>
+						<li>
+						  <a href="Class 4 Employee.html">Class 4 Employees</a>
+						</li>
+						<li>
+						  <a href="Current Posting.html">Current Postings</a>
+						</li>
+						<li><a href="Posting Date.html">Posting Date</a></li>
+  
+						<li>
+						  <a href="Vacant Post Officers.html"
+							>Vacant Posts(Officers)</a
+						  >
+						</li>
+						<li>
+						  <a href="Vacant Post Staffs.html"
+							>Vacant Posts(Staff)</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Deputation.html"
+							>Officers in Deputation</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Lien.html">Officers on Lien</a>
+						</li>
+						<li>
+						  <a href="Officer In Reserve.html"
+							>Officers in Reserve</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Foreign.html"
+							>Officers in Foreign Country</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer On Leave.html">Officers on Leave</a>
+						</li>
+						<li>
+						  <a href="PRL Dates.html">PRL Dates of Officers</a>
+						</li>
+						<li><a href="Employee Added.html">Employee Added</a></li>
+						<li><a href="PDS Update.html">PDS Update List</a></li>
+						<li>
+						  <a href="Foreign Travel Report.html"
+							>Foreign Travel Reports</a
+						  >
+						</li>
+					  </ul>
                   </div>
                 </div>
               </div>
@@ -300,57 +301,98 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
+      <!--start page wrapper -->
 
-      <div class="col-md-10 page-content">
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-5 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Find Staffs And Posting
+                  </h4>
+                  <h6 class="mb-0 text-dark">Search Staff:</h6>
+                </div>
+                <hr />
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div class="col-md-4">
+                    <label for="inputClass" class="form-label"
+                      >Select Class</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputClass" class="form-select">
+                      <option selected>Select Class</option>
+                      <option>class 3</option>
+                      <option>class 4</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4">
+                    <label
+                      style="font-size: 13px"
+                      for="inputDesignation"
+                      class="form-label"
+                      >Select Designation</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputDesignation" class="form-select">
+                      <option selected>Select Designation</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputZone" class="form-label"
+                      >Select Zone</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputZone" class="form-select">
+                      <option selected>Select Zone Office</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputCircle" class="form-label"
+                      >Select Circle</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputCircle" class="form-select">
+                      <option selected>Select circle Office</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputDivision" class="form-label"
+                      >Select Division</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputDivision" class="form-select">
+                      <option selected>Select Division Office</option>
+                    </select>
+                  </div>
+
+                  <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-success px-5">
+                      Search
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
+    <!--end page wrapper -->
+    <!--start overlay-->
+
     <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
+      <p class="mb-0">Designed & Developed BY Shell Technologies</p>
     </footer>
 
     <script
