--- a/PDS Info Update/Children Info.html
+++ b/PDS Info Update/Children Info.html
@@ -24,12 +24,13 @@
     <link href="/assets/css/bootstrap.css" rel="stylesheet" />
     <link href="/assets/css/bootstrap-extended.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      href="/https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Officers</title>
   </head>
 
   <body>
@@ -72,7 +73,7 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
+                      <li><a href="index.html">Short PDS</a></li>
                       <li><a href="PDS Printing.html">PDS Printing</a></li>
                       <li>
                         <a href="Search Officers.html">Search Officers</a>
@@ -81,11 +82,7 @@
                       <li>
                         <a href="Grade 9 & Above.html">Grade 9 & Above</a>
                       </li>
-                      <li>
-                        <a href="Sub-Assistant Engineers.html"
-                          >Sub-Assistent Engineer</a
-                        >
-                      </li>
+                      <li><a href="index.html">Sub-Assistent Engineer</a></li>
                       <li>
                         <a href="Class 3 Employee.html">Class 3 Employees</a>
                       </li>
@@ -96,7 +93,6 @@
                         <a href="Current Posting.html">Current Postings</a>
                       </li>
                       <li><a href="Posting Date.html">Posting Date</a></li>
-
                       <li>
                         <a href="Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
@@ -107,37 +103,19 @@
                           >Vacant Posts(Staff)</a
                         >
                       </li>
+                      <li><a href="index.html">Officers in Deputation</a></li>
+                      <li><a href="index.html">Officers on Lien</a></li>
+                      <li><a href="index.html">Officers in Reserve</a></li>
                       <li>
-                        <a href="Officer In Deputation.html"
-                          >Officers in Deputation</a
-                        >
+                        <a href="index.html">Officers in Foreign Country</a>
                       </li>
-                      <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
-                      </li>
-                      <li>
-                        <a href="Officer In Reserve.html"
-                          >Officers in Reserve</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Foreign.html"
-                          >Officers in Foreign Country</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
-                      </li>
+                      <li><a href="index.html">Officers on Leave</a></li>
                       <li>
                         <a href="PRL Dates.html">PRL Dates of Officers</a>
                       </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li>
-                        <a href="Foreign Travel Report.html"
-                          >Foreign Travel Reports</a
-                        >
-                      </li>
+                      <li><a href="index.html">Employee Added</a></li>
+                      <li><a href="index.html">PDS Update List</a></li>
+                      <li><a href="index.html">Foreign Travel Reports</a></li>
                     </ul>
                   </div>
                 </div>
@@ -180,7 +158,7 @@
                       </li>
                       <li><a href="Training Info.html">Training Info.</a></li>
                       <li><a href="Service.html">Service Exam</a></li>
-                       <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
+                      <li><a href="Affiliation.html">Affiliations</a></li>
                       <li><a href="Honours.html">Honours/Award</a></li>
                       <li><a href="Publications.html">Publication</a></li>
                       <li>
@@ -300,58 +278,226 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
 
-      <div class="col-md-10 page-content">
+      <!--start page wrapper -->
+
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-7 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Children Information:
+                  </h4>
+                </div>
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div
+                    class="col-md-12 d-flex align-items-center justify-content-center"
+                  >
+                    <label for="inputClass" class="form-label mx-2"
+                      >Search by Gradation No.:
+                    </label>
+                    <input
+                      style="width: 150px"
+                      class="form-control"
+                      type="text"
+                      name="txtSearchGradation"
+                      maxlength="16"
+                      value=""
+                    />
+                    <button
+                      type="submit"
+                      class="btn btn-success mx-2 px-2 py-0"
+                    >
+                      GO
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="table-secondary">
+                      <td style="width: 200px">Child Name</td>
+                      <td style="width: 150px">Date of Birth</td>
+                      <td style="width: 100px">Gender</td>
+
+                      <td style="width: 100px"></td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Rasel Ahmed</td>
+                      <td>17-01-2002</td>
+                      <td>Male</td>
+
+                      <td class="text-center">
+                        <button
+                          type="submit"
+                          class="btn btn-outline-success py-0"
+                        >
+                          Edit
+                        </button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>salauddin</td>
+                      <td style="width: 100px">17-01-2002</td>
+                      <td style="width: 100px">Male</td>
+
+                      <td class="text-center">
+                        <button
+                          type="submit"
+                          class="btn btn-outline-success py-0"
+                        >
+                          Edit
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body p-4">
+                <div class="card-title">
+                  <h5 class="text-dark text-center">
+                    Enter Children Information:
+                  </h5>
+                  <hr />
+                </div>
+                <form>
+                  <div class="row align-items-center g-2">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Child Name</label
+                        >
+                      </div>
+                      <div class="col-md-6 mb-2">
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Gender</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <select
+                          class="form-select"
+                          aria-label="Default select example"
+                          style="width: 200px"
+                        >
+                          <option value="1">Male</option>
+                          <option value="2">Female</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label
+                          style="font-size: 12px"
+                          for="inputClass"
+                          class="col-form-label"
+                          >Date of Birth</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <input type="date" id="form" style="width: 130px" />
+                      </div>
+                    </div>
+
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-success">Add</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body p-4">
+                <div class="card-title">
+                  <h5 class="text-dark text-center">
+                    Edit Children Information:
+                  </h5>
+                  <hr />
+                </div>
+                <form>
+                  <div class="row align-items-center g-2">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Child Name</label
+                        >
+                      </div>
+                      <div class="col-md-6 mb-2">
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Gender</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <select
+                          class="form-select"
+                          aria-label="Default select example"
+                          style="width: 200px"
+                        >
+                          <option value="1">Male</option>
+                          <option value="2">Female</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label
+                          style="font-size: 12px"
+                          for="inputClass"
+                          class="col-form-label"
+                          >Date of Birth</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <input type="date" id="form" style="width: 130px" />
+                      </div>
+                    </div>
+
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-success">
+                        Update
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
-    </footer>
+      <!--end page wrapper -->
+      <!--start overlay-->
+
+      <footer class="page-footer">
+        <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -359,7 +505,7 @@
       crossorigin="anonymous"
     ></script>
     <!--plugins-->
-      <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/plugins/simplebar/js/simplebar.min.js"></script>
     <script src="/assets/plugins/metismenu/js/metisMenu.min.js"></script>
     <script src="/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
