--- a/PDS Info Update/Spouse Info.html
+++ b/PDS Info Update/Spouse Info.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Officers</title>
   </head>
 
   <body>
@@ -44,7 +45,7 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
@@ -300,58 +301,131 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
-
-      <div class="col-md-10 page-content">
+      <!--sidebar wrapper -->
+      <div class="col-md-8 mt-4">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-7 mx-auto">
+            <div class="card">
+              <div class="card-body px-5">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Spouse Information
+                  </h4>
+                </div>
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div
+                    class="col-md-12 d-flex align-items-center justify-content-center"
+                  >
+                    <label for="inputClass" class="form-label mx-2"
+                      >Search by Gradation No.:
+                    </label>
+                    <input
+                      style="width: 150px"
+                      class="form-control"
+                      type="text"
+                      name="txtSearchGradation"
+                      maxlength="16"
+                      value=""
+                    />
+                    <button
+                      type="submit"
+                      class="btn btn-success mx-2 px-2 py-0"
+                    >
+                      GO
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <form>
+                  <div class="row align-items-center g-2 mx-2">
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label"
+                        >Spouse Name:
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <input class="form-control" type="text" />
+                    </div>
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label"
+                        >Home district
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <select id="inputDistrict" class="form-select">
+                        <option selected>Select District</option>
+                        
+                      </select>
+                    </div>
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label"
+                        >Profession
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <input class="form-control" type="text" />
+                    </div>
+
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label"
+                        >Designation
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <input class="form-control" type="text" />
+                    </div>
+
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label"
+                        >Organization
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <input class="form-control" type="text" />
+                    </div>
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label"
+                        >Location
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <input class="form-control" type="text" />
+                    </div>
+                    <div class="col-md-3">
+                      <label for="inputClass" class="col-form-label">
+                        Remarks
+                      </label>
+                    </div>
+                    <div class="col-md-8">
+                      <input class="form-control" type="text" />
+                    </div>
+
+                    <div class="col-md-12 text-center mt-4">
+                      <button type="submit" class="btn btn-success px-2 py-0">
+                        Update
+                      </button>
+                      <button type="submit" class="btn btn-success px-2 py-0">
+                        Cancel
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
+
+        <footer class="page-footer">
+          <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+        </footer>
       </div>
     </div>
-
-    <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
-    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
