--- a/Reports/Class 3 Employee.html
+++ b/Reports/Class 3 Employee.html
@@ -35,7 +35,7 @@
   <body>
     <div class="Header row p-2">
       <div class="col-md-1 img">
-        <img src="/assets//gvt.png" alt="" />
+        <img src="/assets/gvt.png" alt="" />
       </div>
       <div class="col-md-11">
         <h4 class="mb-0">Human Resource Infomation</h4>
@@ -78,9 +78,8 @@
                         <a href="Search Officers.html">Search Officers</a>
                       </li>
                       <li><a href="Search Staffs.html">Search Staffs</a></li>
+                      <li><a href="index.html">Grade 9 & Above</a></li>
                       <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-                      </li>
                       <li>
                         <a href="Sub-Assistant Engineers.html"
                           >Sub-Assistent Engineer</a
@@ -96,7 +95,6 @@
                         <a href="Current Posting.html">Current Postings</a>
                       </li>
                       <li><a href="Posting Date.html">Posting Date</a></li>
-
                       <li>
                         <a href="Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
@@ -180,7 +178,7 @@
                       </li>
                       <li><a href="Training Info.html">Training Info.</a></li>
                       <li><a href="Service.html">Service Exam</a></li>
-                       <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
+                      <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
                       <li><a href="Honours.html">Honours/Award</a></li>
                       <li><a href="Publications.html">Publication</a></li>
                       <li>
@@ -301,49 +299,38 @@
         </ul>
       </div>
       <!-- PAGE CONTENT -->
-
-      <div class="col-md-10 page-content">
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
-
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+          <div class="col-xl-9 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="row mb-4">
+                  <div class="col-md-10"><h6>Class 3 Employees List</h6></div>
+                </div>
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="table-secondary">
+                      <td scope="col">Sl.</td>
+                      <td scope="col">Grad No.</td>
+                      <td>Full Name</td>
+                      <td>Designation</td>
+                      <td scope="col">Status</td>
+                      <td scope="col">Posting</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -359,7 +346,7 @@
       crossorigin="anonymous"
     ></script>
     <!--plugins-->
-      <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/plugins/simplebar/js/simplebar.min.js"></script>
     <script src="/assets/plugins/metismenu/js/metisMenu.min.js"></script>
     <script src="/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
