--- a/Reports/PRL Dates.html
+++ b/Reports/PRL Dates.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Staff</title>
   </head>
 
   <body>
@@ -44,8 +45,9 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
+      <!--sidebar wrapper -->
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
         <ul class="metismenu" id="menu">
@@ -71,74 +73,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-                    <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
-                      <li>
-                        <a href="Search Officers.html">Search Officers</a>
-                      </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-                      </li>
-                      <li>
-                        <a href="Sub-Assistant Engineers.html"
-                          >Sub-Assistent Engineer</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Current Posting.html">Current Postings</a>
-                      </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
-
-                      <li>
-                        <a href="Vacant Post Officers.html"
-                          >Vacant Posts(Officers)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Vacant Post Staffs.html"
-                          >Vacant Posts(Staff)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Deputation.html"
-                          >Officers in Deputation</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
-                      </li>
-                      <li>
-                        <a href="Officer In Reserve.html"
-                          >Officers in Reserve</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Foreign.html"
-                          >Officers in Foreign Country</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
-                      </li>
-                      <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
-                      </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li>
-                        <a href="Foreign Travel Report.html"
-                          >Foreign Travel Reports</a
-                        >
-                      </li>
-                    </ul>
+					<ul>
+						<li><a href="Short PDS.html">Short PDS</a></li>
+						<li><a href="PDS Printing.html">PDS Printing</a></li>
+						<li>
+						  <a href="Search Officers.html">Search Officers</a>
+						</li>
+						<li><a href="Search Staffs.html">Search Staffs</a></li>
+						<li>
+						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+						</li>
+						<li>
+						  <a href="Sub-Assistant Engineers.html"
+							>Sub-Assistent Engineer</a
+						  >
+						</li>
+						<li>
+						  <a href="Class 3 Employee.html">Class 3 Employees</a>
+						</li>
+						<li>
+						  <a href="Class 4 Employee.html">Class 4 Employees</a>
+						</li>
+						<li>
+						  <a href="Current Posting.html">Current Postings</a>
+						</li>
+						<li><a href="Posting Date.html">Posting Date</a></li>
+  
+						<li>
+						  <a href="Vacant Post Officers.html"
+							>Vacant Posts(Officers)</a
+						  >
+						</li>
+						<li>
+						  <a href="Vacant Post Staffs.html"
+							>Vacant Posts(Staff)</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Deputation.html"
+							>Officers in Deputation</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Lien.html">Officers on Lien</a>
+						</li>
+						<li>
+						  <a href="Officer In Reserve.html"
+							>Officers in Reserve</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Foreign.html"
+							>Officers in Foreign Country</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer On Leave.html">Officers on Leave</a>
+						</li>
+						<li>
+						  <a href="PRL Dates.html">PRL Dates of Officers</a>
+						</li>
+						<li><a href="Employee Added.html">Employee Added</a></li>
+						<li><a href="PDS Update.html">PDS Update List</a></li>
+						<li>
+						  <a href="Foreign Travel Report.html"
+							>Foreign Travel Reports</a
+						  >
+						</li>
+					  </ul>
                   </div>
                 </div>
               </div>
@@ -300,57 +302,120 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
 
-      <div class="col-md-10 page-content">
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-5 mx-auto">
+            <div class="card">
+              <div class="card-body p-3">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Report: PRL Dates of Officers
+                  </h4>
+                  <h6 class="mb-0 text-dark">Search for PRL Dates:</h6>
+                </div>
+                <hr />
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div class="col-md-12">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inlineCheckbox1"
+                      value="option1"
+                    />
+                    <label class="form-check-label ms-2" for="inlineCheckbox1"
+                      >PRL date of all officers</label
+                    >
+                  </div>
+                  <div class="col-md-12">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inlineCheckbox1"
+                      value="option1"
+                    />
+                    <label class="form-check-label mx-2" for="inlineCheckbox1"
+                      >From</label
+                    >
+                    <input type="date"  />
+                    <label class="form-check-label mx-2" for="inlineCheckbox1"
+                      >To</label
+                    >
+                    <input type="date"  />
+                  </div>
+
+                  <div class="col-md-12">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inlineCheckbox1"
+                      value="option1"
+                    />
+                    <label class="form-check-labe mx-2" for="inlineCheckbox1"
+                      >Class1 Officers</label
+                    >
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inlineCheckbox2"
+                      value="option2"
+                    />
+                    <label class="form-check-label ms-2" for="inlineCheckbox1">
+                      Sub-Assistant Engineer</label
+                    >
+                  </div>
+                  <div class="col-md-12">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inlineCheckbox1"
+                      value="option1"
+                    />
+                    <label class="form-check-label ms-2 " for="inlineCheckbox1"
+                      >Civil Engineer
+                    </label>
+                    <input
+                      class="form-check-input mx-2"
+                      type="checkbox"
+                      id="inlineCheckbox2"
+                      value="option2"
+                    />
+                    <label class="form-check-label" for="inlineCheckbox1">
+                      E/M Engineer</label
+                    >
+                  </div>
+
+                  <div class="col-md-12">
+                    <label class="form-check-label me-2" for="inlineCheckbox1"
+                      >Short By:</label
+                    >
+
+                    <input
+                    class="form-check-input mx-2"
+                      type="checkbox"
+                      name="chkSortLPRDate"
+                      value="LPRDate"
+                    />PRL Date
+                  </div>
+
+                  <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-success px-5">
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
+      <p class="mb-0">Designed & Developed BY Shell Technologies</p>
     </footer>
 
     <script
