--- a/Reports/Posting Date.html
+++ b/Reports/Posting Date.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Staff</title>
   </head>
 
   <body>
@@ -44,8 +45,9 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
+      <!--sidebar wrapper -->
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
         <ul class="metismenu" id="menu">
@@ -300,58 +302,111 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
+      <!--start page wrapper -->
 
-      <div class="col-md-10 page-content">
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-7 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Report: Posting Dates of Officers
+                  </h4>
+                  <h6 class="mb-0 text-dark">Search for PRL Dates:</h6>
+                </div>
+                <hr />
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div class="col-md-4">
+                    <label class="form-check-label me-2" for="inlineCheckbox1"
+                      >Posting Before:</label
+                    >
+                  </div>
+                  <div class="col-md-5">
+                    <input type="date" class="form-control" />
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputDesignation" class="form-label"
+                      >Select Designation</label
+                    >
+                  </div>
+                  <div class="col-md-5">
+                    <select id="inputDesignation" class="form-select">
+                      <option selected>Select Designation</option>
+                    </select>
+                  </div>
+
+                  <div class="col-md-12">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inlineCheckbox1"
+                      value="option1"
+                    />
+                    <label class="form-check-label" for="inlineCheckbox1"
+                      >Civil Engineer
+                    </label>
+                    <input
+                      class="form-check-input ms-2"
+                      type="checkbox"
+                      id="inlineCheckbox2"
+                      value="option2"
+                    />
+                    <label class="form-check-label" for="inlineCheckbox1">
+                      E/M Engineer</label
+                    >
+                  </div>
+
+                  <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-success px-5">
+                      Search
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="row"></div>
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="table-secondary">
+                      <td scope="col">Grad No.</td>
+                      <td scope="col">Full Name</td>
+                      <td scope="col">Designation</td>
+                      <td scope="col">Current Office</td>
+                      <td scope="col">Posting Date</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
-    </footer>
+      <!--end page wrapper -->
+      <!--start overlay-->
+      <div class="overlay toggle-icon"></div>
+      <!--end overlay-->
+
+      <!--End Back To Top Button-->
+      <footer class="page-footer">
+        <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
