--- a/Reports/Sub-Assistant Engineers.html
+++ b/Reports/Sub-Assistant Engineers.html
@@ -71,74 +71,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-                    <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
-                      <li>
-                        <a href="Search Officers.html">Search Officers</a>
-                      </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-                      </li>
-                      <li>
-                        <a href="Sub-Assistant Engineers.html"
-                          >Sub-Assistent Engineer</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
-                      </li>
-                      <li>
-                        <a href="Current Posting.html">Current Postings</a>
-                      </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
-
-                      <li>
-                        <a href="Vacant Post Officers.html"
-                          >Vacant Posts(Officers)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Vacant Post Staffs.html"
-                          >Vacant Posts(Staff)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Deputation.html"
-                          >Officers in Deputation</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
-                      </li>
-                      <li>
-                        <a href="Officer In Reserve.html"
-                          >Officers in Reserve</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer In Foreign.html"
-                          >Officers in Foreign Country</a
-                        >
-                      </li>
-                      <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
-                      </li>
-                      <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
-                      </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li>
-                        <a href="Foreign Travel Report.html"
-                          >Foreign Travel Reports</a
-                        >
-                      </li>
-                    </ul>
+					<ul>
+						<li><a href="Short PDS.html">Short PDS</a></li>
+						<li><a href="PDS Printing.html">PDS Printing</a></li>
+						<li>
+						  <a href="Search Officers.html">Search Officers</a>
+						</li>
+						<li><a href="Search Staffs.html">Search Staffs</a></li>
+						<li>
+						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+						</li>
+						<li>
+						  <a href="Sub-Assistant Engineers.html"
+							>Sub-Assistent Engineer</a
+						  >
+						</li>
+						<li>
+						  <a href="Class 3 Employee.html">Class 3 Employees</a>
+						</li>
+						<li>
+						  <a href="Class 4 Employee.html">Class 4 Employees</a>
+						</li>
+						<li>
+						  <a href="Current Posting.html">Current Postings</a>
+						</li>
+						<li><a href="Posting Date.html">Posting Date</a></li>
+  
+						<li>
+						  <a href="Vacant Post Officers.html"
+							>Vacant Posts(Officers)</a
+						  >
+						</li>
+						<li>
+						  <a href="Vacant Post Staffs.html"
+							>Vacant Posts(Staff)</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Deputation.html"
+							>Officers in Deputation</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Lien.html">Officers on Lien</a>
+						</li>
+						<li>
+						  <a href="Officer In Reserve.html"
+							>Officers in Reserve</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer In Foreign.html"
+							>Officers in Foreign Country</a
+						  >
+						</li>
+						<li>
+						  <a href="Officer On Leave.html">Officers on Leave</a>
+						</li>
+						<li>
+						  <a href="PRL Dates.html">PRL Dates of Officers</a>
+						</li>
+						<li><a href="Employee Added.html">Employee Added</a></li>
+						<li><a href="PDS Update.html">PDS Update List</a></li>
+						<li>
+						  <a href="Foreign Travel Report.html"
+							>Foreign Travel Reports</a
+						  >
+						</li>
+					  </ul>
                   </div>
                 </div>
               </div>
@@ -301,49 +301,44 @@
         </ul>
       </div>
       <!-- PAGE CONTENT -->
-
-      <div class="col-md-10 page-content">
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
-
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+          <div class="col-xl-9 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="row mb-4">
+                  <div class="col-md-10">
+                    <h6>Sub-Assistant Engineers List</h6>
+                  </div>
+                  <div class="col-md-2">
+                    <button class="btn btn-success py-0">civil</button>
+                    <button class="btn btn-success py-0">E/M</button>
+                  </div>
+                </div>
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="table-secondary">
+                      <td scope="col">Sl.</td>
+                      <td scope="col">Grad No.</td>
+                      <td scope="col">Image</td>
+                      <td scope="col">Full Name</td>
+                      <td scope="col">Designation</td>
+                      <td scope="col">Posting</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
