--- a/Reports/Vacant Post Staffs.html
+++ b/Reports/Vacant Post Staffs.html
@@ -29,7 +29,8 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title>Search Officers</title>
   </head>
 
   <body>
@@ -44,8 +45,10 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
+      <!--sidebar wrapper -->
+
       <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
         <ul class="metismenu" id="menu">
@@ -96,7 +99,6 @@
                         <a href="Current Posting.html">Current Postings</a>
                       </li>
                       <li><a href="Posting Date.html">Posting Date</a></li>
-
                       <li>
                         <a href="Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
@@ -300,58 +302,91 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
 
-      <div class="col-md-10 page-content">
+      <!-- Page content -->
+
+      <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-md-5 pwdimg">
-            <img
-              style="border: 5px solid #000000"
-              src="./assets/pwdho.jpg"
-              alt=""
-            />
+          <div class="col-xl-5 mx-auto">
+            <div class="card">
+              <div class="card-body p-5">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    List Of Vacant Posts (Staffs)
+                  </h4>
+                  <h6 class="mb-0 text-dark">Search For vacant Posts:</h6>
+                </div>
+                <hr />
 
-            <p
-              style="
-                font-size: 12px;
-                color: #cc0000;
-                font-weight: bold;
-                text-align: center;
-                margin-top: 20px;
-              "
-            >
-              Purta Bhaban, Segunbagicha, Dhaka 1000
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p style="font-size: 16px; color: #000000; text-align: justify">
-              <b>Public Works Department (PWD),</b> under the Ministry of
-              Housing and Public Works, is the pioneer in construction arena of
-              Bangladesh. Over about two centuries, PWD could successfully set
-              the trend and standard in the country's infrastructure
-              development. It plays a pivotal role in the implementation of
-              government construction projects. It also undertakes projects for
-              autonomous bodies as deposit works. Public Works Department has
-              highly qualified and experienced professionals forming a
-              multi-disciplinary team of civil, electrical and mechanical
-              engineers who work alongside architects from the Department of
-              Architecture. With its strong base of standards and
-              professionalism developed over the years, PWD is the repository of
-              expertise and hence the first choices among discerning clients for
-              any type of construction project in Bangladesh. Besides being the
-              construction agency of the Government, it performs regulatory
-              function in setting the pace and managing projects for the
-              country's construction industry under the close supervision of the
-              Ministry of Housing and Public Works.
-            </p>
+                <form class="row g-3">
+                  <div class="col-md-4">
+                    <label for="inputZone" class="form-label"
+                      >Select Zone</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputZone" class="form-select">
+                      <option selected>Select Zone Office</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputCircle" class="form-label"
+                      >Select Circle</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputCircle" class="form-select">
+                      <option selected>Select circle Office</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputDivision" class="form-label"
+                      >Select Division</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputDivision" class="form-select">
+                      <option selected>Select Division Office</option>
+                    </select>
+                  </div>
+
+                  <div class="col-md-4">
+                    <label
+                      style="font-size: 13px"
+                      for="inputDesignation"
+                      class="form-label"
+                      >Select Designation</label
+                    >
+                  </div>
+                  <div class="col-md-8">
+                    <select id="inputDesignation" class="form-select">
+                      <option selected>Select Designation</option>
+                    </select>
+                  </div>
+
+                  <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-success px-5">
+                      Search
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
-    </footer>
+      <!--end page wrapper -->
+      <!--start overlay-->
+      <div class="overlay toggle-icon"></div>
+      <!--end overlay-->
+
+      <footer class="page-footer">
+        <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
